my-dir/main/default/objects/custObj1__c/custObj1__c.object-meta.xml
<CustomObject
     >
    <historyRetentionPolicy n1:nil="true" />
    <label>custObj1</label>
    <nameField>
        <label>custObj1 Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>custObj1s</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>