my-dir/main/default/objects/custObj1__c/fields/field1__c.field-meta.xml
<CustomField>
    <fullName>field1__c</fullName>
    <label>field1</label>
    <length>200</length>
    <type>Text</type>
</CustomField>