my-dir/main/default/objects/custObj1__c/fields/field3__c.field-meta.xml
<CustomField>
    <fullName>field3__c</fullName>
    <label>field3</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>