my-dir/main/default/objects/custObj1__c/fields/field4__c.field-meta.xml
<CustomField>
    <fullName>field4__c</fullName>
    <label>field4</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>